# kagents

./: .dockerignore  .env.example  .envrc  .gitignore  AGENTS.md  Dockerfile  GNUmakefile  README.md  pyproject.toml  requirements.txt
agents/.adk/: session.db
agents/artifact_assistant/: __init__.py  agent.py  server.py
agents/browser_assistant/: agent.py  server.py
agents/browser_assistant/.adk/: session.db
agents/doc_search/: __init__.py  agent.py  server.py
agents/doc_search/.adk/: session.db
agents/portfolio_manager/: __init__.py  agent.py  server.py
agents/portfolio_manager/.adk/: session.db
agents/workspace_assistant/: __init__.py  agent.py
data/browser_apps/: sample_portal.html  sample_report.txt
data/browser_tasks/: browser_tasks.json  browser_tasks.template.json
data/context/: chart_styles.json  chart_styles.template.json  operating_rules.json  operating_rules.template.json  org_context.json  session_memory.json  session_memory.template.json  tool_preferences.json  tool_preferences.template.json  user_profile.json  user_profile.template.json
docs/: context_management.md  implementation_journal.md
prompts/: doc_search_test_prompts.md  portfolio_manager_test_prompts.md
scripts/: bootstrap_venv.ps1
src/kagents/: __init__.py  adk_server.py  cli.py  config.py  document_store.py
tests/: test_agent_structure.py  test_browser_tasks.py  test_charting.py  test_context_loader.py  test_context_router.py  test_document_search.py  test_eval_assets.py  test_growth_context.py  test_lseg.py  test_org_context.py  test_session_memory.py
(+12 files in other folders)
